--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
